# modular_sessions

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
modular_sessions/: __init__.py  __meta__.py  _middleware.py  errors.py  schemas.py  typing.py
modular_sessions/backends/: __init__.py  memory.py  meta.py  redis.py
modular_sessions/frontends/: __init__.py  cookie.py  meta.py
modular_sessions/verification/: basic.py  meta.py
