[tool.poetry]
name = "modular-sessions"
version = "0.1.0"
description = ""
repository = "https://github.com/beehivewarrior/modular_sessions/"
authors = ["Jordan Bigelow <jordan@jordanbigelow.com>"]
readme = "README.md"
packages = [{include = "modular_sessions"}]
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Libraries :: Application Frameworks',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0"
itsdangerous = "^2.1.1"
black = {version = "^23.3.0", optional = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
