[tool.poetry]
name = "modular-sessions"
version = "0.1.1"
description = ""
repository = "https://github.com/beehivewarrior/modular_sessions/"
authors = ["Jordan Bigelow <jordan@jordanbigelow.com>"]
readme = "README.md"
packages = [{include = "modular_sessions"}]
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Libraries :: Application Frameworks',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
itsdangerous = ">=2.0.1"
fastapi = ">=0"

[tool.poetry.extras]
redis = ["aioredis"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
